fixedOverflow

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Teko&display=swap');
 
-html { height: 100%;} body { min-height: 100%; }
+html { height: 100%;
+    overflow-x: hidden;
+} body { min-height: 100%; 
+        overflow-x: hidden;}
 
 * {
+  max-width: 100%;
     padding: 15px;
     font-style: normal;
     font-weight: 400;
